--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/stack": "^6.2.2",
-    "expo": "~46.0.6",
+    "expo": "^46.0.7",
     "expo-barcode-scanner": "~11.4.0",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
